# hdpath-rs

./: .gitignore  Cargo.toml  README.adoc  crates.md
.github/workflows/: publish.yaml  test.yaml
src/: errors.rs  lib.rs  path_account.rs  path_custom.rs  path_short.rs  path_standard.rs  path_value.rs  purpose.rs  traits.rs
