[package]
name = "hdpath"
description = "Hierarchical Deterministic Path (BIP32, BIP43, BIP44, BIP49, BIP84)"
version = "0.6.1"
authors = ["Igor Artamonov <igor@artamonov.ru>"]
edition = "2018"
readme = "crates.md"
license = "Apache-2.0"
repository = "https://github.com/emeraldpay/hdpath-rs"
documentation = "https://docs.rs/hdpath"

[lib]
name = "hdpath"
path = "src/lib.rs"

[dependencies]
byteorder= "1.3.4"
bitcoin = { version = ">= 0.27", optional = true }

[dev-dependencies]
rand = "0.7.3"
quickcheck = "0.9.2"

[features]
default = []
with-bitcoin = ["bitcoin"]